# Freya

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cpu/: cpu.cpp  cpu.hpp
interrupt_controller/: interrupts.cpp  interrupts.hpp
ram/: ram.cpp  ram.hpp
registers/: registers.cpp  registers.hpp
renderer/: renderer.cpp  renderer.hpp
